--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -175,7 +175,7 @@
 	</div>
 <!--Delete modal end -->
 	
-	<script src="/js/post.js"></script>
+	<script src="/js/user.js"></script>
 	<script src="/js/deleteModal.js"></script>
 </body>
 </html>
