--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -62,6 +62,7 @@ a{
 .custom-table td, table th {
   border: 1px solid #ddd;
   padding: 4px;
+  text-align: center;
 }
 
 .custom-table tr:nth-child(even){
@@ -72,7 +73,7 @@ a{
 .custom-table th {
   padding-top: 8px;
   padding-bottom: 8px;
-  text-align: left;
+  text-align: center;
   background-color: #333333;
   color: #ffffff;
 }
