--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -30,6 +30,8 @@
 			</div>
 		</div>
 		<div class="table-div">
+			<span class="success" th:text="${successMessage}"></span>
+			<span class="delete" th:text="${deleteMessage}"></span>
 			<table class="custom-table">
 				<tbody>
 					<tr>
@@ -67,25 +69,29 @@
 		<div class="modalContent">
 			<div class="modal-header">
 				<span class="modalCloseButton">&times;</span>
-				<h3>Add new Coach</h3>
+				<h3>Add new Player</h3>
 			</div>
 			<div class="modal-body">
 				<form th:action="@{/rest/player/addNew}" method="post" enctype="multipart/form-data">
 					<div class="form-div">
 						<label>Name</label>
-						<input type="text" name="name">
+						<input type="text" name="name" required pattern="[a-zA-Z_]{2,25}" 
+							   title="Name should be 2-25 character long">
 					</div>
 					<div class="form-div">
 						<label>Surname</label>
-						<input type="text" name="surname">
+						<input type="text" name="surname" required pattern="[a-zA-Z_]{2,25}" 
+							   title="Surname should be 2-25 character long">
 					</div>
 					<div class="form-div">
 						<label>Age</label>
-						<input type="text" name="age">
+						<input type="text" name="age" required pattern="[0-9]{1,2}" 
+							   title="Age should be 1-2 characters long and contain only numbers">
 					</div>
 					<div class="form-div">
 						<label>Phone</label>
-						<input type="text" name="phone">
+						<input type="text" name="phone"  pattern="[0-9]{8,15}" 
+							   title="Phone should be 8-15 character long and contain only numbers">
 					</div>
 					<div class="form-div">
 						<label>Email</label>
@@ -122,7 +128,6 @@
 					<div class="form-div">
 						<label>Team</label>
 						<select name="teamId" required>
-							<option>Select Team</option>
 							<option th:each="team:${teams}"
 							th:value="${team.id}"
 							th:text="${team.teamName}">
@@ -130,7 +135,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/*">
+						<input type="file" id="photo" name="file" accept="images/jpeg">
 					</div>
 					<button class="modalSaveButton" type="submit">Save</button>
 				</form>
@@ -156,19 +161,23 @@
 					</div>
 					<div class="form-div">
 						<label>Name</label>
-						<input type="text" id="nameEdit" name="name">
+						<input type="text" id="nameEdit" name="name" required pattern="[a-zA-Z_]{2,25}" 
+							   title="Name should be 2-25 character long">
 					</div>
 					<div class="form-div">
 						<label>Surname</label>
-						<input type="text" id="surnameEdit" name="surname">
+						<input type="text" id="surnameEdit" name="surname" required pattern="[a-zA-Z_]{2,25}" 
+							   title="Surname should be 2-25 character long">
 					</div>
 					<div class="form-div">
 						<label>Age</label>
-						<input type="text" id="ageEdit" name="age">
+						<input type="text" id="ageEdit" name="age" required pattern="[0-9]{1,2}" 
+							   title="Age should be 1-2 characters long and contain only numbers">
 					</div>
 					<div class="form-div">
 						<label>Phone</label>
-						<input type="text" id="phoneEdit" name="phone">
+						<input type="text" id="phoneEdit" name="phone" pattern="[0-9]{8,15}" 
+							   title="Phone should be 8-15 character long and contain only numbers">
 					</div>
 					<div class="form-div">
 						<label>Email</label>
@@ -204,7 +213,7 @@
 					</div>
 					<div class="form-div">
 						<label>Team</label>
-						<select id="teamIdEdit" name="teamId">
+						<select required id="teamIdEdit" name="teamId">
 							<option>Select Team</option>
 							<option th:each="team:${teams}"
 							th:value="${team != null} ? ${team.id} : 'null'"
@@ -213,7 +222,7 @@
 					</div>
 					<div class="form-div">
 						<label>Select image:</label>
-						<input type="file" id="photo" name="file" accept="images/*">
+						<input type="file" id="photo" name="file" accept="images/jpeg">
 					</div>
 					<div class="form-div">
 						<button class="modalSaveButton" type="submit">Save</button>
