--- a/src/main/resources/templates/attendance.html
+++ b/src/main/resources/templates/attendance.html
@@ -14,7 +14,7 @@
 	
 	<div class="individual-main-container">
 		<div class="individual-tittle-div">
-			<h1>Edit Attendance</h1>
+			<h1>Attendance</h1>
 		</div>
 		
 		<div class="individual-side-div">
