--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -75,12 +75,12 @@
 				<form th:action="@{/rest/player/addNew}" method="post" enctype="multipart/form-data">
 					<div class="form-div">
 						<label>Name</label>
-						<input type="text" name="name" required pattern="[a-zA-Z_]{2,25}" 
+						<input type="text" name="name" required pattern="[a-zA-Z\s]{2,25}" 
 							   title="Name should be 2-25 character long">
 					</div>
 					<div class="form-div">
 						<label>Surname</label>
-						<input type="text" name="surname" required pattern="[a-zA-Z_]{2,25}" 
+						<input type="text" name="surname" required pattern="[a-zA-Z\s]{2,25}" 
 							   title="Surname should be 2-25 character long">
 					</div>
 					<div class="form-div">
