--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -27,7 +27,7 @@
 				</div>
 				<div class="form-div">
 						<label>Description</label>
-						<textarea rows="6" cols="50" name="description" required pattern="[a-zA-Z\s]{2,25}" 
+						<textarea rows="6" cols="50" name="description" required pattern="[]{2,25}" 
 							   title="Description should be 4-5000 character long"></textarea>
 				</div>
 				<div class="form-div">
@@ -79,11 +79,11 @@
 					<div class="form-div">
 						<label>Title</label>
 						<input id="titleEdit" type="text" name="title" required pattern="[a-zA-Z\s]{4,50}" 
-							   title="Name should be 4-50 character long">
+							   title="Title should be 4-50 character long">
 					</div>
 					<div class="form-div">
 						<label>Description</label>
-						<textarea id="descriptionEdit" rows="6" cols="50" name="description" required pattern="[a-zA-Z\s]{2,25}" 
+						<textarea id="descriptionEdit" rows="6" cols="50" name="description" required pattern="[]{2,25}" 
 							   title="Description should be 4-5000 character long"></textarea>
 					</div>
 					<div class="form-div">
