--- a/src/main/resources/templates/tournament.html
+++ b/src/main/resources/templates/tournament.html
@@ -78,7 +78,7 @@
 					</div>
 					<div class="form-div">
 						<label>Address</label>
-						<input type="text"  name="address" required pattern="[a-zA-Z\s]{4,50}" 
+						<input type="text"  name="address" required pattern="[]{4,50}" 
 							   title="Adress should be 4-25 character long">
 					</div>
 					<div class="form-div">
@@ -123,7 +123,7 @@
 					</div>
 					<div class="form-div">
 						<label>Address</label>
-						<input type="text" id="addressEdit"  name="address" required pattern="[a-zA-Z\s]{4,50}" 
+						<input type="text" id="addressEdit"  name="address" required pattern="[]{4,50}" 
 							   title="Adress should be 4-25 character long">
 					</div>
 					<div class="form-div">
