--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -61,8 +61,54 @@ a{
 	color: #ffffff;
 	
 }
+/*Login page*/
+.login-container{
+	position: fixed;
+    width: 100%;
+    height: 100%;
+    background-image: url(../img/unnamed.jpg);
+  	/* Center and scale the image nicely */
+  	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: cover;
+}
 
+.login-panel{
+	padding:50px;
+	padding-top:70px;
+	padding-bottom:70px;
+	margin-top:80px;
+	background-color: rgba(255,255,255,0.2);
+	width: 20%;
+	margin-left:auto;
+	margin-right:auto;
+	justify-content: center;
+	border:1px solid black;
+	border-radius: 20px;
+}
 
+.login-panel h2{
+	color: white;
+	margin: 0;
+	padding: 0;
+}
+
+.login-panel input{
+	width:90%;
+	border-radius: 5px;
+	margin-bottom:5px;
+	padding: 10px;
+}
+
+.login-button{
+	margin-top: 5px;
+	padding: 10px;
+	border-radius: 5px;
+}
+
+.login-button:hover{
+	background-color: gray;
+}
 
 .custom-table {
 	table-layout: auto;
@@ -217,7 +263,8 @@ header nav ul li:hover ul {
 
 .main-page-showcase{
 	min-height: 400px;
-	background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/main.jpg) no-repeat 0 -300px;
+	width:100%;
+	background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/main.jpg)  0 -300px;
 	text-align: center;
 	color: #ffffff;
 	
