--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -572,8 +572,6 @@ footer{
 .team-div li{
 	text-decoration: none;
 	display:flex;
-	
-	
 }
 
 /*Team Details*/
@@ -758,5 +756,50 @@ footer{
 .admin-center2-div{
 	grid-column:3/6;
 	grid-row:4/4;
+}
+
+/*Post page*/
+.post-container{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	margin:auto;
+	overflow: hidden;
+	background-color: #e6e6e6;
+}
+
+.post-div {
+	margin:5px;
+	padding: 10px;
+	background-color: #f4f4f4;
+}
+
+.post-div img{
+	width: 100%;
+	max-height: 150px;
+}
+
+.post-li{
+	margin-bottom:5px;
+	background-color: #333333;
+	color: #f4f4f4;
+	width: 100%;
+	padding: 10px;
+}
+
+.post-li a{
+	color: #f4f4f4;
+	/*border-right: 1px solid #f4f4f4;*/
+	padding: 5px;  
+	
+}
+
+.post-li a:hover{
+	background-color: gray; 
+	
+}
+
+.post-div li{
+	text-decoration: none;
+	display:flex;
 }
 
